# BluetoothAutoConnect

./: .gitattributes  .gitignore  AUDIO_DEVICE_README.md  BluetoothMonitor.cpp  BluetoothMonitorGUI.cpp  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  GIT使用说明.md  GUI使用说明.txt  LICENSE  README.md  README_EN.md  WARP.md  build.bat  build_gui.bat  build_mingw.bat  config.txt  resource.rc
.github/workflows/: README.md  ci.yml  release.yml
